--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 keys.plist
 
 Pods/*
+
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
